[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/menus/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/sfx/ChooseMenu.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/sfx/SelectMenu.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/graphics/menus/options/Opções.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Apparitions.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/graphics/interface/labels/LongLabel.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/interface/labels/ShortLabel.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/interface/labelSelectors/arrow-point-to-right0.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/MainLargeArrowLoop.tres" type="Animation" id=9]
[ext_resource path="res://assets/animations/MainShortArrowLoop.tres" type="Animation" id=10]
[ext_resource path="res://assets/graphics/interface/labelSelectors/Select.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/interface/labelSelectors/Hover.png" type="Texture" id=12]
[ext_resource path="res://assets/animations/FadeIn.tres" type="Animation" id=13]
[ext_resource path="res://assets/animations/FadeOut.tres" type="Animation" id=14]

[sub_resource type="DynamicFont" id=1]

size = 120
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 60
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Select",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "None",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Hover",
"speed": 5.0
} ]

[node name="Options" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]
hoverMenu = ExtResource( 2 )
selectMenu = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="." index="0"]

modulate = Color( 0.832031, 0.832031, 0.832031, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1366.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Hint", "Margin", "Material", "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -679.0
margin_top = 24.0
margin_right = 677.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Opções"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts", "custom_styles" ]

[node name="ScreenMode" type="TextureRect" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 176.0
margin_right = 980.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="ScreenMode" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 9.0
margin_right = 257.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Modo de Tela"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="ScreenMode" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 338.0
margin_top = 9.0
margin_right = 564.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Tela cheia"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="MasterVolume" type="TextureRect" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 266.0
margin_right = 980.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="MasterVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 9.0
margin_right = 257.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Volume Geral"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="MasterVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 343.0
margin_top = 9.0
margin_right = 569.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="MusicVolume" type="TextureRect" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 356.0
margin_right = 980.0
margin_bottom = 438.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="MusicVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 9.0
margin_right = 257.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Volume Música"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="MusicVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 343.0
margin_top = 9.0
margin_right = 569.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="EffectVolume" type="TextureRect" parent="." index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 446.0
margin_right = 980.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="EffectVolume" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 9.0
margin_right = 257.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Volume Efeito"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Value" type="Label" parent="EffectVolume" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 343.0
margin_top = 9.0
margin_right = 569.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="Credits" type="TextureRect" parent="." index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 683.0
margin_top = 536.0
margin_right = 975.0
margin_bottom = 618.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="Credits" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 9.0
margin_right = 257.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Créditos"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Data" type="TextureRect" parent="." index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 386.0
margin_top = 536.0
margin_right = 678.0
margin_bottom = 618.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="Label" parent="Data" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 9.0
margin_right = 281.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Resetar jogo"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Return" type="TextureRect" parent="." index="8"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = 260.0
margin_right = 127.0
margin_bottom = 360.0
rect_min_size = Vector2( 200, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Grow Direction", "Hint", "Margin", "Rect", "Textures", "Theme" ]
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Return" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 71.0
margin_top = 18.0
margin_right = 180.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Voltar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Arrows" type="Node2D" parent="." index="9"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="ArrowRight" type="TextureRect" parent="Arrows" index="0"]

modulate = Color( 0.121094, 0.108322, 0.108322, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 923.697
margin_top = 200.0
margin_right = 962.697
margin_bottom = 239.0
rect_pivot_offset = Vector2( 19, 19 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ArrowLeft" type="TextureRect" parent="Arrows" index="1"]

modulate = Color( 0.121094, 0.108322, 0.108322, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 712.303
margin_top = 200.0
margin_right = 751.303
margin_bottom = 239.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 19, 19 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ArrowAnimation" type="AnimationPlayer" parent="Arrows" index="2"]

root_node = NodePath("..")
autoplay = "FadeIn"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/MainLargeArrowLoop = ExtResource( 9 )
anims/MainShortArrowLoop = ExtResource( 10 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Cursor" type="AnimatedSprite" parent="." index="10"]

position = Vector2( 674, 697 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
animation = "Hover"
_sections_unfolded = [ "Transform" ]

[node name="EraseData" type="Control" parent="." index="11"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="FadeBackground" type="ColorRect" parent="EraseData" index="0"]

self_modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1372.0
margin_bottom = 774.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="EraseData" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -16.0
margin_top = 115.0
margin_right = 1340.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Tem certeza?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "Visibility", "custom_fonts", "custom_styles" ]

[node name="Label" type="Label" parent="EraseData" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 231.0
margin_top = 281.0
margin_right = 1112.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Todas as pontuações de todas as fases serão apagadas! Esta ação não pode ser desfeita"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Options" type="TextureRect" parent="EraseData" index="3"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 475.0
margin_top = 440.0
margin_right = 834.0
margin_bottom = 722.0
rect_min_size = Vector2( 200, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Grow Direction", "Hint", "Margin", "Rect", "Textures", "Theme" ]
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="EraseData/Options" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 42.0
margin_right = 257.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Cancelar

Confirmar"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Cursor" type="AnimatedSprite" parent="EraseData" index="4"]

position = Vector2( 670, 670 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
animation = "Hover"
_sections_unfolded = [ "Transform" ]

[node name="Fade" type="ColorRect" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1372.0
margin_bottom = 774.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="FadeAnimation" type="AnimationPlayer" parent="." index="13"]

root_node = NodePath("..")
autoplay = "FadeIn"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeIn = ExtResource( 13 )
anims/FadeOut = ExtResource( 14 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="14"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"


